<resources>
    <string name="app_name">My Application2</string>
    <string name="fab_msg">display button</string>
    <string name="tiet_name">Name</string>
    <string name="enrollment_date">Enrollment date</string>
    <string name="enrollment_date2">Enrollment date</string>
    <string name="save">save</string>
    <string name="distance">Distance</string>
    <string name="full_time">Full Time</string>
    <string name="study_type">Study type:</string>
    <string name="faculty">Faculty:</string>
    <string name="main2_invalid_name_minim_3_caractere">Invalid name. Minim 3 caractere</string>
    <string name="main2_invalid_date_format">Invalid date format.</string>

    <string-array name = "add_faculties">
        <item> CSIE</item>
        <item> FABIZ</item>
    </string-array>
</resources>