<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity2">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main2_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiet_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/main2_tiet_enr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enrollment_date2"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/faculty" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_weight="1"
            android:entries="@array/add_faculties"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/study_type" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="382dp"
            android:layout_height="480dp">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:text="@string/full_time"
                android:checked="true"
                />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="142dp"
                android:layout_height="60dp"
                android:text="@string/distance" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" />

        </RadioGroup>
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>